istio/deployments/istio/basic/istio-gateway.yml
#istio gateway
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: servicea
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---
#istio service entry
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: servicea
spec:
  hosts:
    - www.google.com
  ports:
    - number: 80
      name: http
      protocol: HTTP
  resolution: DNS
  location: MESH_INTERNAL
  endpoints:
    - address: servicea.demo.svc.cluster.local
      ports:
        http: 8081
  exportTo:
    - "."
